# pidgin-paranoia

./: AUTHORS  ChangeLog  DEV_HELP  HACKING  INFO  INSTALL  Makefile.am  NEWS  README  TODO  build.sh  check_entropy.c  configure.ac  copy-template-keys.sh  key_management.c  key_management.h  keygen.c  keygen.h  libotp-internal.h  libotp.c  libotp.h  loop-small.entropy  otperror.h  otptester.c  otptester_compile.sh  pad.py  paranoia.c  template-rev-small.entropy  template-rev.entropy  template.entropy
branches/keygen/: ChangeLog  README  build.sh  build_secure.sh  check_entropy.c  invert.c  keygen.c  keygen_secure.c
branches/keygen_enhancements/: INFO  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  key_management.c  key_management.h  keygen.c  libotp.c  libotp.h  otperror.h  paranoia.c
branches/keygen_enhancements/debian/: control  copyright
branches/keygen_enhancements/tools/: otp.c
branches/keygen_integration/: AUTHORS  HACKING  Makefile.am  README  TODO  configure.ac  keygen.c  keygen.h  libotp.c  libotp.h  paranoia.c
branches/keygen_integration/tools/: Makefile.am  otptester_compile.sh
branches/python-otp/: README
debian/: changelog  copyright  rules
po/: de.po  fr.po  pidgin-paranoia.pot
tags/0.1.0/: ChangeLog  Makefile.am  NEWS  README  TODO  libotp.h
tags/0.1.0/tools/: template-rev.entropy
tags/0.2.0/: HACKING  INSTALL  Makefile.am  libotp.c  libotp.h
tags/0.3.0/: INSTALL  TODO  keygen.h  libotp.c
tags/0.3.0/debian/: changelog  control
tags/0.3.0/tools/: template-small.entropy
tags/0.4.0/: ChangeLog  NEWS  autogen.sh  libotp.h
tags/0.4.0/debian/: control  docs
tags/0.4.0/po/: POTFILES.in  de.po
tags/0.4.0/tools/: Makefile.am  otptester.c
tools/: Makefile.am  copy-template-keys.sh  otptester.c
trunk/: AUTHORS  ChangeLog  DEV_HELP  HACKING  INFO  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  copy-template-keys.sh  key_management.c  key_management.h  keygen.c  keygen.h  libotp-internal.h  libotp.c  libotp.h  loop-small.entropy  otperror.h  otptester.c  otptester_compile.sh  paranoia.c  template-small.entropy  template.entropy
trunk/debian/: changelog  control  docs  rules  watch
trunk/po/: de.po  fr.po
trunk/tools/: Makefile.am  copy-template-keys.sh  loop.entropy  otp.c  otptester.c  otptester_compile.sh
